defconfig: land: Enable wake_gestures

--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -653,3 +653,29 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FORCE_FAST_CHARGE=y
+#CONFIG_CPUMAXFREQ=y
+CONFIG_SERIAL_NUM=y
+#CONFIG_SECBOOT_FUSE=y
+CONFIG_FINGERPRINT=y
+CONFIG_FINGERPRINT_GOODIX_GF3208=y
+CONFIG_FINGERPRINT_FPC1020=y
+CONFIG_DYNAMIC_DEBUG=y
+CONFIG_UID_CPUTIME=y
+CONFIG_CIFS=y
+CONFIG_XFRM_MIGRATE=y
+CONFIG_NET_KEY_MIGRATE=y
+
+CONFIG_MSM_KERNEL_PROTECT=y
+CONFIG_MSM_KERNEL_PROTECT_MPU=y
+CONFIG_MSM_DBA=y
+CONFIG_MSM_DBA_ADV7533=y
+CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="simple_ondemand"
+
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_DEFAULT_DEADLINE=y
+
+CONFIG_HZ=300
+CONFIG_SCHED_HRTICK=y
+
+CONFIG_WAKE_GESTURES=y
