--- a/arch/arm/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937.dtsi
@@ -705,9 +705,7 @@
 			<  768000000 1>,
 			<  902400000 2>,
 			<  998400000 4>,
-			< 1094400000 5>,
-			< 1209600000 6>,
-			< 1344000000 6>;
+			< 1094400000 6>;
 
 		qcom,speed0-bin-v0-c1 =
 			<          0 0>,
@@ -715,8 +713,7 @@
 			< 1094400000 2>,
 			< 1248000000 4>,
 			< 1344000000 5>,
-			< 1497600000 6>,
-			< 1536000000 6>;
+			< 1401000000 6>;
 
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
@@ -782,22 +779,20 @@
 		qcom,governor-per-policy;
 
 		qcom,cpufreq-table-0 =
-			 <  422400 >,
-			 <  768000 >,
+			 <  960000 >,
 			 < 1094400 >,
 			 < 1209600 >,
 			 < 1248000 >,
 			 < 1344000 >,
 			 < 1401000 >,
-			 < 1497600 >,
-			 < 1536000 >;
+			 < 1497600 >;
+
 		qcom,cpufreq-table-4 =
 			 <  768000 >,
 			 <  902400 >,
 			 <  998400 >,
 			 < 1094400 >,
-			 < 1209600 >,
-			 < 1344000 >;
+			 < 1209600 >;
 	};
 
 	cci_cache: qcom,cci {
@@ -865,19 +860,10 @@
 			< 1344000  7031 >,
 			< 1497600  7031 >;	/* TURBO */
 		cpu-to-dev-map-4 =
-			<  422400  1611 >,
-			<  768000  2929 >,	/* SVS   */
-			< 1094400  5053 >,	/* SVS+  */
-			< 1209600  5712 >,	/* NOM   */
-			< 1344000  6152 >,	/* NOM+  */
-			< 1536000  7031 >;	/* TURBO */
-		cpu-to-dev-map-4 =
-			<  345600  1611 >,
-			<  768000  2929 >,	/* SVS   */
-			<  902400  5053 >,	/* SVS+  */
-			<  998400  5712 >,	/* NOM   */
-			< 1094400  6152 >,	/* NOM+  */
-			< 1344000  7031 >;	/* TURBO */
+			<  806400  2929 >,	/* SVS  */
+			<  902400  5053 >,	/* NOM   */
+			<  998400  6152 >,	/* NOM+  */
+			< 1209600  7031 >;	/* TURBO */
 		};
 
 		cci-cpufreq {
@@ -889,29 +875,20 @@
 			< 1344000  533333 >,
 			< 1497600  533333 >;	/* TURBO */
 		cpu-to-dev-map-4 =
-			<  422400  400000 >,
-			<  768000  400000 >,	/* SVS   */
-			< 1094400  400000 >,	/* SVS+  */
-			< 1209600  533333 >,	/* NOM   */
-			< 1344000  533333 >,	/* NOM+  */
-			< 1536000  533333 >;	/* TURBO */
-		cpu-to-dev-map-4 =
-			<  345600  400000 >,
-			<  768000  400000 >,	/* SVS   */
-			<  902400  400000 >,	/* SVS+  */
-			<  998400  533333 >,	/* NOM   */
-			< 1094400  533333 >,	/* NOM+  */
-			< 1344000  533333 >;	/* TURBO */
+			<  806400  400000 >,	/* SVS  */
+			<  902400  400000 >,	/* NOM   */
+			<  998400  533333 >,	/* NOM+  */
+			< 1209600  533333 >;	/* TURBO */
 		};
 
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map-0 =
 				< 1094400 2929 >,
-				< 1536000 4248 >;
+				< 1497600 4248 >;
 			cpu-to-dev-map-4 =
 				<  998400 2929 >,
-				< 1344000 4248 >;
+				< 1209600 4248 >;
 		};
 	};
 
