Cpu and Gpu frequencies changes

--- a/arch/arm/boot/dts/qcom/msm8937-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-gpu.dtsi
@@ -37,28 +37,27 @@
 			< 5346 >, /* 7. DDR:662.40 MHz BIMC: 331.20 MHz */
 			< 5712 >, /* 8. DDR:748.80 MHz BIMC: 374.40 MHz */
 			< 6152 >, /* 9. DDR:806.40 MHz BIMC: 403.20 MHz */
-			< 7031 >; /* 10. DDR:921.60 MHz BIMC: 460.80 MHz */
+			< 7031 >, /* 10. DDR:921.60 MHz BIMC: 460.80 MHz */
+			< 7759 >; /* 11. DDR:1017.00 MHz BIMC: 508.50 MHz */
 	};
 
 	msm_gpu: qcom,kgsl-3d0@1c00000 {
 		label = "kgsl-3d0";
 		compatible = "qcom,kgsl-3d0", "qcom,kgsl-3d";
 		status = "ok";
-		reg = <0x1c00000 0x40000
-		       0xa0000 0x6fff>;
-		reg-names = "kgsl_3d0_reg_memory", "qfprom_memory";
+		reg = <0x1c00000 0x40000>;
+		reg-names = "kgsl_3d0_reg_memory";
 		interrupts = <0 33 0>;
 		interrupt-names = "kgsl_3d0_irq";
 		qcom,id = <0>;
 		qcom,chipid = <0x05000500>;
 
-		qcom,initial-pwrlevel = <2>;
+		qcom,initial-pwrlevel = <4>;
 
 		qcom,idle-timeout = <80>; //msecs
 		qcom,strtstp-sleepwake;
-
+		
 		qcom,highest-bank-bit = <14>;
-
 		qcom,snapshot-size = <1048576>; //bytes
 
 		clocks = <&clock_gcc clk_gcc_oxili_gfx3d_clk>,
@@ -78,7 +77,7 @@
 		qcom,bus-control;
 		qcom,bus-width = <16>;
 		qcom,msm-bus,name = "grp3d";
-		qcom,msm-bus,num-cases = <11>;
+		qcom,msm-bus,num-cases = <12>;
 		qcom,msm-bus,num-paths = <1>;
 		qcom,msm-bus,vectors-KBps =
 				<26 512 0 0>,	    /*    off        */
@@ -91,8 +90,8 @@
 				<26 512 0 5299200>, /* 7. 662.40 MHz */
 				<26 512 0 5990400>, /* 8. 748.80 MHz */
 				<26 512 0 6451200>, /* 9. 806.40 MHz */
-				<26 512 0 7372800>; /* 10. 921.60 MHz */
-
+				<26 512 0 7372800>, /* 10. 921.60 MHz */
+				<26 512 0 8136000>; /* 11. 1017.00 MHz */
 		/* GDSC regulator names */
 		regulator-names = "vddcx", "vdd";
 		/* GDSC oxili regulators */
@@ -105,7 +104,6 @@
 
 		/*  Quirks  */
 		qcom,gpu-quirk-two-pass-use-wfi;
-		qcom,gpu-quirk-dp2clockgating-disable;
 		qcom,gpu-quirk-lmloadkill-disable;
 
 		/* Trace bus */
@@ -115,7 +113,7 @@
 		coresight-outports = <0>;
 		coresight-child-list = <&funnel_mm>;
 		coresight-child-ports = <6>;
-
+		
 		/* Enable context aware freq. scaling */
 		qcom,enable-ca-jump;
 
@@ -151,32 +149,33 @@
 			#size-cells = <0>;
 
 			compatible = "qcom,gpu-pwrlevels";
+			qcom,initial-pwrlevel = <2>;
 
 			/* TURBO */
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
-				qcom,gpu-freq = <450000000>;
-				qcom,bus-freq = <9>;
-				qcom,bus-min = <9>;
-				qcom,bus-max = <9>;
+				qcom,gpu-freq = <600000000>;
+				qcom,bus-freq = <11>;
+				qcom,bus-min = <10>;
+				qcom,bus-max = <11>;
 			};
 
 			/* NOM+ */
 			qcom,gpu-pwrlevel@1 {
 				reg = <1>;
-				qcom,gpu-freq = <400000000>;
-				qcom,bus-freq = <7>;
-				qcom,bus-min = <6>;
-				qcom,bus-max = <9>;
+				qcom,gpu-freq = <500000000>;
+				qcom,bus-freq = <10>;
+				qcom,bus-min = <10>;
+				qcom,bus-max = <10>;
 			};
 
 			/* NOM */
 			qcom,gpu-pwrlevel@2 {
 				reg = <2>;
-				qcom,gpu-freq = <375000000>;
-				qcom,bus-freq = <6>;
-				qcom,bus-min = <5>;
-				qcom,bus-max = <8>;
+				qcom,gpu-freq = <400000000>;
+				qcom,bus-freq = <7>;
+				qcom,bus-min = <6>;
+				qcom,bus-max = <9>;
 			};
 
 			/* SVS+ */
