--- a/arch/arm/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937.dtsi
@@ -22,7 +22,7 @@
 	interrupt-parent = <&intc>;
 
 	chosen {
-		bootargs = "sched_enable_hmp=1 sched_enable_power_aware=1";
+		bootargs = "boot_cpus=0,1,2,3,4,5,6,7 sched_enable_hmp=1";
 	};
 
 	firmware: firmware {
@@ -60,18 +60,11 @@
 			reg = <0x0 0x86800000 0x0 0x5000000>;
 		};
 
-		adsp_fw_mem: adsp_fw_region@0 {
+		reloc_mem: reloc_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x8b800000 0x0 0x1100000>;
+			reg = <0x0 0x8b800000 0x0 0x1800000>;
 		};
-
-		wcnss_fw_mem: wcnss_fw_region@0 {
-			compatible = "removed-dma-pool";
-			no-map;
-			reg = <0x0 0x8c900000 0x0 0x700000>;
-		};
-
 
 		venus_mem: venus_region@0 {
 			compatible = "shared-dma-pool";
@@ -103,7 +96,7 @@
 		};
 
 		cont_splash_mem: splash_region@83000000 {
-			reg = <0x0 0x90000000 0x0 0x1400000>;
+			reg = <0x0 0x8dd00000 0x0 0x1400000>;
 		};
 
 	};
@@ -643,9 +636,9 @@
 		reg = <0x1800000 0x80000>,
 			<0xb016000 0x00040>,
 			<0xb116000 0x00040>,
-			<0x00a6018 0x00004>;
+			<0xb1d0000 0x00040>;
 		reg-names = "cc_base", "apcs_c1_base",
-			"apcs_c0_base", "efuse";
+			"apcs_c0_base", "apcs_cci_base";
 		vdd_dig-supply = <&pm8937_s2_level>;
 		vdd_sr2_dig-supply = <&pm8937_s2_level_ao>;
 		vdd_sr2_pll-supply = <&pm8937_l7_ao>;
@@ -702,62 +695,29 @@
 				"clk-cci-4", "clk-cci-2";
 		qcom,speed0-bin-v0-c0 =
 			<          0 0>,
-			<  768000000 1>,
-			<  902400000 2>,
+			<  345600000 1>,
+			<  768000000 2>,
+			<  902400000 3>,
 			<  998400000 4>,
-			< 1094400000 6>;
+			< 1094400000 5>,
+			< 1209600000 6>,
+			< 1344000000 6>;
 
 		qcom,speed0-bin-v0-c1 =
 			<          0 0>,
-			<  960000000 1>,
-			< 1094400000 2>,
-			< 1248000000 4>,
+			<  422400000 1>,
+			<  768000000 2>,
+			< 1094400000 3>,
+			< 1209600000 4>,
 			< 1344000000 5>,
-			< 1401000000 6>;
+			< 1497600000 6>,
+			< 1536000000 6>;
 
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
-			<  400000000 1>,
-			<  533333333 3>;
+			<  400000000 3>,
+			<  533333333 6>;
 
-		qcom,speed1-bin-v0-c0 =
-			<          0 0>,
-			<  768000000 1>,
-			<  902400000 2>,
-			<  998400000 4>,
-			< 1094400000 6>,
-			< 1209600000 7>;
-
-		qcom,speed1-bin-v0-c1 =
-			<          0 0>,
-			<  960000000 1>,
-			< 1094400000 2>,
-			< 1248000000 4>,
-			< 1344000000 5>,
-			< 1401000000 6>,
-			< 1497600000 7>;
-
-		qcom,speed1-bin-v0-cci =
-			<          0 0>,
-			<  400000000 1>,
-			<  533333333 3>;
-
-		qcom,speed2-bin-v0-c0 =
-			<          0 0>,
-			<  768000000 1>,
-			<  902400000 2>,
-			<  998400000 3>;
-
-		qcom,speed2-bin-v0-c1 =
-			<          0 0>,
-			<  960000000 1>,
-			< 1094400000 2>,
-			< 1209600000 3>;
-
-		qcom,speed2-bin-v0-cci =
-			<          0 0>,
-			<  400000000 1>,
-			<  533333333 3>;
 		#clock-cells = <1>;
 	};
 
@@ -779,20 +739,23 @@
 		qcom,governor-per-policy;
 
 		qcom,cpufreq-table-0 =
-			 <  960000 >,
+			 <  422400 >,
+			 <  768000 >,
 			 < 1094400 >,
 			 < 1209600 >,
 			 < 1248000 >,
 			 < 1344000 >,
 			 < 1401000 >,
-			 < 1497600 >;
-
+			 < 1497600 >,
+			 < 1536000 >;
 		qcom,cpufreq-table-4 =
+			 <  345600 >,
 			 <  768000 >,
 			 <  902400 >,
 			 <  998400 >,
 			 < 1094400 >,
-			 < 1209600 >;
+			 < 1209600 >,
+			 < 1344000 >;
 	};
 
 	cci_cache: qcom,cci {
@@ -854,41 +817,47 @@
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
 		cpu-to-dev-map-0 =
-			<  998400  2929 >,      /* SVS   */
-			< 1094400  5053 >,	/* NOM   */
-			< 1248000  5712 >,	/* NOM+  */
-			< 1344000  7031 >,
-			< 1497600  7031 >;	/* TURBO */
+			<  422400  1611 >,
+			<  768000  2929 >,	/* SVS   */
+			< 1094400  5053 >,	/* SVS+  */
+			< 1209600  5712 >,	/* NOM   */
+			< 1344000  6152 >,	/* NOM+  */
+			< 1536000  7031 >;	/* TURBO */
 		cpu-to-dev-map-4 =
-			<  806400  2929 >,	/* SVS  */
-			<  902400  5053 >,	/* NOM   */
-			<  998400  6152 >,	/* NOM+  */
-			< 1209600  7031 >;	/* TURBO */
+			<  345600  1611 >,
+			<  768000  2929 >,	/* SVS   */
+			<  902400  5053 >,	/* SVS+  */
+			<  998400  5712 >,	/* NOM   */
+			< 1094400  6152 >,	/* NOM+  */
+			< 1344000  7031 >;	/* TURBO */
 		};
 
 		cci-cpufreq {
 		target-dev = <&cci_cache>;
 		cpu-to-dev-map-0 =
-			<  998400  400000 >,    /* SVS   */
-			< 1094400  400000 >,	/* NOM   */
-			< 1248000  533333 >,	/* NOM+  */
-			< 1344000  533333 >,
-			< 1497600  533333 >;	/* TURBO */
+			<  422400  400000 >,
+			<  768000  400000 >,	/* SVS   */
+			< 1094400  400000 >,	/* SVS+  */
+			< 1209600  533333 >,	/* NOM   */
+			< 1344000  533333 >,	/* NOM+  */
+			< 1536000  533333 >;	/* TURBO */
 		cpu-to-dev-map-4 =
-			<  806400  400000 >,	/* SVS  */
-			<  902400  400000 >,	/* NOM   */
-			<  998400  533333 >,	/* NOM+  */
-			< 1209600  533333 >;	/* TURBO */
+			<  345600  400000 >,
+			<  768000  400000 >,	/* SVS   */
+			<  902400  400000 >,	/* SVS+  */
+			<  998400  533333 >,	/* NOM   */
+			< 1094400  533333 >,	/* NOM+  */
+			< 1344000  533333 >;	/* TURBO */
 		};
 
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map-0 =
 				< 1094400 2929 >,
-				< 1497600 4248 >;
+				< 1536000 4248 >;
 			cpu-to-dev-map-4 =
 				<  998400 2929 >,
-				< 1209600 4248 >;
+				< 1344000 4248 >;
 		};
 	};
 
@@ -1072,7 +1041,7 @@
 					RPM_SMD_REGULATOR_LEVEL_TURBO>;
 		qcom,vddcx-voltage-level = <RPM_SMD_REGULATOR_LEVEL_NOM
 					RPM_SMD_REGULATOR_LEVEL_NONE
-					RPM_SMD_REGULATOR_LEVEL_BINNING>;
+					RPM_SMD_REGULATOR_LEVEL_TURBO>;
 		qcom,vddpx-voltage-level = <1800000 0 1800000>;
 
 		qcom,iris-vddxo-current = <10000>;
@@ -1266,7 +1235,6 @@
 		reg = <0xa601c 0x8>;
 		reg-names = "fuse-base";
 	};
-
 	sn_fuse: snfuse@0xa0128 {
 		compatible = "qcom,sn-fuse";
 		reg = <0xa0128 0x4>;
@@ -1278,6 +1246,9 @@
 		reg = <0xa41d0 0x4>;
 		reg-names = "sec-boot-base";
 	};
+
+
+
 
 	jtag_mm0: jtagmm@61bc000 {
 		compatible = "qcom,jtagv8-mm";
@@ -1528,8 +1499,6 @@
 		qcom,use-sw-aes-xts-algo;
 		qcom,use-sw-aes-ccm-algo;
 		qcom,use-sw-ahash-algo;
-		qcom,use-sw-hmac-algo;
-		qcom,use-sw-aead-algo;
 		qcom,ce-opp-freq = <100000000>;
 	};
 
@@ -1634,7 +1603,7 @@
 		};
 	};
 
-	bam_dmux: qcom,bam_dmux@4044000 {
+	qcom,bam_dmux@4044000 {
 		compatible = "qcom,bam_dmux";
 		reg = <0x4044000 0x19000>;
 		interrupts = <0 162 1>;
@@ -1780,7 +1749,7 @@
 		vdd-supply = <&gdsc_mdss>;
 	};
 
-	pil_mss: qcom,mss@4080000 {
+	qcom,mss@4080000 {
 		compatible = "qcom,pil-q6v55-mss";
 		reg = <0x04080000 0x100>,
 		      <0x0194f000 0x010>,
@@ -1808,8 +1777,6 @@
 		qcom,proxy-clock-names = "xo";
 		qcom,active-clock-names = "iface_clk", "bus_clk", "mem_clk";
 
-		qcom,pas-id = <5>;
-		qcom,pil-mss-memsetup;
 		qcom,firmware-name = "modem";
 		qcom,pil-self-auth;
 		qcom,override-acc-1 = <0x80800000>;
@@ -1847,7 +1814,7 @@
 			label = "modem";
 		};
 
-		mem_client_3_size: qcom,client_3 {
+		qcom,client_3 {
 			compatible = "qcom,memshare-peripheral";
 			qcom,peripheral-size = <0x0>;
 			qcom,client-id = <1>;
@@ -1891,7 +1858,7 @@
 		/* GPIO output to lpass */
 		qcom,gpio-force-stop = <&smp2pgpio_ssr_smp2p_2_out 0 0>;
 
-		memory-region = <&adsp_fw_mem>;
+		memory-region = <&reloc_mem>;
 	};
 
 	qcom,pronto@a21b000 {
@@ -1929,7 +1896,7 @@
 
 		/* GPIO output to wcnss */
 		qcom,gpio-force-stop = <&smp2pgpio_ssr_smp2p_4_out 0 0>;
-		memory-region = <&wcnss_fw_mem>;
+		memory-region = <&reloc_mem>;
 	};
 
 	qcom,venus@1de0000 {
@@ -2055,152 +2022,4 @@
 	clock-names = "core_clk";
 	clocks = <&clock_gcc clk_gcc_oxili_gfx3d_clk>;
 	status = "okay";
-};
-
-/* GPU overrides */
-&msm_gpu {
-
-	qcom,gpu-speed-bin = <0x6018 0x80000000 31>;
-
-	qcom,gpu-pwrlevel-bins {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		compatible="qcom,gpu-pwrlevel-bins";
-
-		qcom,gpu-pwrlevels-0 {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			qcom,speed-bin = <0>;
-
-			qcom,initial-pwrlevel = <2>;
-
-			/* TURBO */
-			qcom,gpu-pwrlevel@0 {
-				reg = <0>;
-				qcom,gpu-freq = <450000000>;
-				qcom,bus-freq = <9>;
-				qcom,bus-min = <9>;
-				qcom,bus-max = <9>;
-			};
-
-			/* NOM+ */
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
-				qcom,gpu-freq = <400000000>;
-				qcom,bus-freq = <7>;
-				qcom,bus-min = <6>;
-				qcom,bus-max = <9>;
-			};
-
-			/* NOM */
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
-				qcom,gpu-freq = <375000000>;
-				qcom,bus-freq = <6>;
-				qcom,bus-min = <5>;
-				qcom,bus-max = <8>;
-			};
-
-			/* SVS+ */
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
-				qcom,gpu-freq = <300000000>;
-				qcom,bus-freq = <5>;
-				qcom,bus-min = <4>;
-				qcom,bus-max = <7>;
-			};
-
-			/* SVS */
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
-				qcom,gpu-freq = <216000000>;
-				qcom,bus-freq = <3>;
-				qcom,bus-min = <1>;
-				qcom,bus-max = <4>;
-			};
-
-			/* XO */
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
-				qcom,gpu-freq = <19200000>;
-				qcom,bus-freq = <0>;
-				qcom,bus-min = <0>;
-				qcom,bus-max = <0>;
-			};
-		};
-
-		qcom,gpu-pwrlevels-1 {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			qcom,speed-bin = <1>;
-
-			qcom,initial-pwrlevel = <3>;
-
-			/* Super TURBO */
-			qcom,gpu-pwrlevel@0 {
-				reg = <0>;
-				qcom,gpu-freq = <475000000>;
-				qcom,bus-freq = <10>;
-				qcom,bus-min = <10>;
-				qcom,bus-max = <10>;
-			};
-
-			/* TURBO */
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
-				qcom,gpu-freq = <450000000>;
-				qcom,bus-freq = <9>;
-				qcom,bus-min = <9>;
-				qcom,bus-max = <10>;
-			};
-
-			/* NOM+ */
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
-				qcom,gpu-freq = <400000000>;
-				qcom,bus-freq = <7>;
-				qcom,bus-min = <6>;
-				qcom,bus-max = <9>;
-			};
-
-			/* NOM */
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
-				qcom,gpu-freq = <375000000>;
-				qcom,bus-freq = <6>;
-				qcom,bus-min = <5>;
-				qcom,bus-max = <8>;
-			};
-
-			/* SVS+ */
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
-				qcom,gpu-freq = <300000000>;
-				qcom,bus-freq = <5>;
-				qcom,bus-min = <4>;
-				qcom,bus-max = <7>;
-			};
-
-			/* SVS */
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
-				qcom,gpu-freq = <216000000>;
-				qcom,bus-freq = <3>;
-				qcom,bus-min = <1>;
-				qcom,bus-max = <4>;
-			};
-
-			/* XO */
-			qcom,gpu-pwrlevel@6 {
-				reg = <6>;
-				qcom,gpu-freq = <19200000>;
-				qcom,bus-freq = <0>;
-				qcom,bus-min = <0>;
-				qcom,bus-max = <0>;
-			};
-		};
-	};
 };
